# px4_onboard_tracker

./: .gitignore
commu_node/src/: client.py  commu_node.py  wifi.py
onboard_controller/: CMakeLists.txt  package.xml
onboard_controller/include/onboard_controller/: onboard_controller.h
onboard_controller/launch/: onboard_controller.launch
onboard_controller/src/: onboard_controller.cpp  onboard_controller_node.cpp
